<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aleaho.anjie.MainActivity" >

    <!-- 贷款类型 -->

    <TextView
        android:id="@id/TxTDaikuanLeibie"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:text="@string/daikuanleibie" />

    <Spinner
        android:id="@id/SpDaikuanLeibie"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="1dp" />

    <!-- 计算方式 -->

    <TextView
        android:id="@id/TxTJiSuanFangFa"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="58dp"
        android:text="@string/jisuanfangfa" />

    <Spinner
        android:id="@id/SpJiSuanFangFa"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="44dp" />

    <!-- 贷款期限 -->

    <TextView
        android:id="@id/TxTDaiKuanQiXian"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="102dp"
        android:text="@string/huankuannianxian" />

    <Spinner
        android:id="@id/SpDaiKuanQiXian"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="87dp" />

    <!-- 贷款总额 -->

    <TextView
        android:id="@id/TxTDaiKuanZongE"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="146dp"
        android:text="@string/daikuanzonge1" />

    <EditText
        android:id="@id/etDaiKuanZongE"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/shuruedu"
        android:inputType="numberSigned"
        android:textColorHint="#238745" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/danwei"
        android:layout_width="25dp"
        android:layout_height="18dp"
        android:layout_marginLeft="215dp"
        android:layout_marginTop="146dp"
        android:text="@string/danwei" />

    <!-- 贷款利率 -->

    <TextView
        android:id="@+id/txtDaiKuanLiLv"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="185dp"
        android:text="@string/daikuanlilv" />

    <EditText
        android:id="@id/etDaiKuanZongE"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:hint="@string/shurulilv"
        android:inputType="numberSigned"
        android:textColorHint="#731245" >
    </EditText>

    <TextView
        android:id="@+id/idanwei"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="216dp"
        android:layout_marginTop="180dp"
        android:textScaleX="1.2"
        android:text="@string/baifenhao"
        android:textColor="@android:color/holo_red_dark" />
		
		
	 <!-- 第一次还款时间 -->

    <TextView
        android:id="@id/txtChuCiHuanKuanShiJian"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="231dp"
        android:text="@string/chucihuankuanshijian" />	

	<DatePicker
	    android:id="@id/dpChuCiHuanKuanShiJian"
	    android:layout_width="151dp"
	    android:layout_height="38dp"
	    android:layout_marginLeft="100dp"
	    android:layout_marginTop="221dp" />

    <Button
        android:id="@id/btjisuan"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="390dp"
        android:text="@string/jisuan" />

</FrameLayout>