<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aleaho.anjie.AnJieInfo" >

    <FrameLayout
        android:id="@+id/huizong"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:paddingRight="5dip">

        <ListView
            android:id="@+id/lvhuizongxinxi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/mingxi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:text="@string/imQiShu"
                android:textSize="10sp" />

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:text="@string/imYueHuanKuan"
                android:textSize="10sp" />

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:text="@string/imLiXi"
                android:textSize="10sp" />

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:text="@string/imBenJin"
                android:textSize="10sp" />

            <TextView
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:text="@string/imSuoQianBenJin"
                android:textSize="10sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lvAnJieInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip" />
    </FrameLayout>

</LinearLayout>