<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aleaho.anjie.MainActivity" >

    <!-- 贷款类别 -->

    <TextView
        android:id="@+id/TxtSYDKLL"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:text="@string/sydkll" />

    <EditText
        android:id="@+id/etSYDKLL"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColorHint="#238745" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TxtBFH1"
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:text="@string/baifenhao" 
        android:textColor="#ff0000" />

    <!-- 计算方法 -->

    <TextView
        android:id="@+id/TxTGJJDKLL"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:gravity="center_vertical"
        android:text="@string/gjjll" />

<EditText
        android:id="@+id/etGJJDKLL"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColorHint="#238745" >
    </EditText>

    <TextView
        android:id="@+id/TxtBFH2"
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="80dp"
        android:gravity="center_vertical"
        android:text="@string/baifenhao" 
        android:textColor="#f00000"/>

    <!-- 贷款期限 -->

    <Button
        android:id="@+id/btSetting"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/setting" />

</FrameLayout>